# bti3012-dsdt-t2

./: README.md  pyproject.toml
dsdt_t2/: scraping.ipynb
