[tool.poetry]
name = "dsdt-t2"
version = "0.1.0"
description = ""
authors = ["Luis Züttel <luis.zuettel@students.bfh.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
duckdb = "^1.1.2"
jupysql = "^0.10.14"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
